# rusty

./: .gitignore  Cargo.toml  readme.md
beginner/aliasing/src/: main.rs
beginner/arrays_and_slices/src/: main.rs
beginner/c_like/: Cargo.toml
beginner/casting/src/: main.rs
beginner/comments/src/: main.rs
beginner/constants/src/: main.rs
beginner/custom_types/src/: main.rs
beginner/debug/src/: main.rs
beginner/declare_first/src/: main.rs
beginner/display/src/: main.rs
beginner/enum_use/: Cargo.toml
beginner/enums/src/: main.rs
beginner/expressions/src/: main.rs
beginner/formatting/src/: main.rs
beginner/freezing/src/: main.rs
beginner/from_and_into/src/: main.rs
beginner/if_else/src/: main.rs
beginner/inference/src/: main.rs
beginner/literals/src/: main.rs
beginner/literals_and_operators/src/: main.rs
beginner/loops/src/: main.rs
beginner/mutability/src/: main.rs
beginner/nesting_and_labels/: Cargo.toml
beginner/nesting_and_labels/src/: main.rs
beginner/parsing_a_string/: Cargo.toml
beginner/parsing_a_string/src/: main.rs
beginner/primitives/src/: main.rs
beginner/print/src/: main.rs
beginner/returning_from_loops/: Cargo.toml
beginner/returning_from_loops/src/: main.rs
beginner/scope_and_shadowing/src/: main.rs
beginner/structures/src/: main.rs
beginner/testcase_list/src/: main.rs
beginner/testcase_list_enum/: Cargo.toml
beginner/testcase_list_enum/src/: main.rs
beginner/to_and_from_strings/: Cargo.toml
beginner/to_and_from_strings/src/: main.rs
beginner/tryfrom_and_tryinto/: Cargo.toml
beginner/tryfrom_and_tryinto/src/: main.rs
beginner/tuples/src/: main.rs
beginner/variable_bindings/src/: main.rs
beginner/while_loop/src/: main.rs
course/arrays/src/: main.rs
course/booleans/src/: main.rs
course/chars/src/: main.rs
course/data_types/src/: main.rs
course/floats/src/: main.rs
course/guessing_game/src/: main.rs
course/integers/src/: main.rs
course/shadowing/src/: main.rs
course/tuple/src/: main.rs
course/variables/src/: main.rs
