[workspace]
resolver = "2"
members = [
  "beginner/aliasing",
  "beginner/arrays_and_slices",
  "beginner/c_like",
  "beginner/casting",
  "beginner/comments",
  "beginner/constants",
  "beginner/custom_types",
  "beginner/debug",
  "beginner/declare_first",
  "beginner/display",
  "beginner/enum_use",
  "beginner/enums",
  "beginner/formatting",
  "beginner/freezing",
  "beginner/hello",
  "beginner/inference",
  "beginner/literals",
  "beginner/literals_and_operators",
  "beginner/mutability",
  "beginner/primitives",
  "beginner/print",
  "beginner/scope_and_shadowing",
  "beginner/structures",
  "beginner/testcase_list",
  "beginner/testcase_list_enum",
  "beginner/tuples",
  "beginner/variable_bindings",
]
