[workspace]
resolver = "2"
members = [
  "beginner/aliasing",
  "beginner/arrays_and_slices",
  "beginner/c_like",
  "beginner/casting",
  "beginner/comments",
  "beginner/constants",
  "beginner/custom_types",
  "beginner/debug",
  "beginner/declare_first",
  "beginner/display",
  "beginner/enum_use",
  "beginner/enums",
  "beginner/expressions",
  "beginner/formatting",
  "beginner/freezing",
  "beginner/from_and_into",
  "beginner/hello",
  "beginner/if_else",
  "beginner/inference",
  "beginner/literals",
  "beginner/literals_and_operators",
  "beginner/mutability",
  "beginner/parsing_a_string",
  "beginner/primitives",
  "beginner/print",
  "beginner/scope_and_shadowing",
  "beginner/structures",
  "beginner/testcase_list",
  "beginner/testcase_list_enum",
  "beginner/to_and_from_strings",
  "beginner/tryfrom_and_tryinto",
  "beginner/tuples",
  "beginner/variable_bindings",
]
